# modern-di

./: .gitignore  AGENTS.md  CLAUDE.md  Justfile  README.md  ROADMAP.md  context7.json  mkdocs.yml  pyproject.toml
.github/workflows/: _checks.yml  benchmarks.yml  ci.yml  core-ci.yml  docs.yml  fastapi-ci.yml  lint.yml  publish.yml  release.yml  scheduled.yml  test-core.yml  test-fastapi.yml  test-faststream.yml  test-litestar.yml
architecture/: README.md  concurrency.md  containers.md  glossary.md  integration-kit.md  providers.md  resolution.md  scopes.md  testing-and-overrides.md  validation.md
benchmarks/: README.md  RESULTS.md  bench_cycle_detection.py  bench_kwargs_split.py  bench_override_fastpath.py  bench_scope_map.py  test_bench_kwargs_split.py  test_bench_override_fastpath.py  test_bench_scope_map.py  test_guard_cold.py  test_guard_concurrency.py  test_guard_lifecycle.py  test_guard_resolve.py  test_guard_validate.py
benchmarks/comparative/: pyproject.toml  test_dependency_injector.py  test_dishka.py  test_modern_di.py  test_that_depends.py  test_wireup.py
docs/: CNAME  context7.json  index.md  requirements.txt
docs/dev/: contributing.md  decisions.md  development-notes.md  key-concepts.md  main-decisions.md
docs/integrations/: aiogram.md  aiohttp.md  arq.md  celery.md  fastapi.md  faststream.md  flask.md  grpc.md  litestar.md  pytest.md  starlette.md  taskiq.md  typer.md  writing-integrations.md
docs/introduction/: about-di.md  application-settings.md  comparison.md  context-data.md  design-decisions.md  for-fastapi-users.md  inject-factories.md  key-concepts.md  performance.md  resolving.md  that-depends-or-modern-di.md
docs/migration/: from-dependency-injector.md  from-that-depends.md  to-1.md  to-1.x.md  to-2.x.md  to-3.x.md
docs/providers/: advanced-api.md  alias.md  cast-attribute.md  collections.md  container.md  context-providers.md  context.md  errors-and-exceptions.md  factories.md  lifecycle.md  object.md  resources.md  scopes.md  singleton.md  singletons.md
docs/recipes/: async-lifespan.md  good-and-bad-practices.md  multi-group.md  request-scoped-engine.md  sqlalchemy.md  testing-overrides.md
docs/testing/: fixtures.md  overriding-dependencies.md
docs/troubleshooting/: alias-source-not-registered-error.md  argument-resolution-error.md  async-finalizer-in-sync-close-error.md  child-container-registration-error.md  circular-dependency.md  container-closed-error.md  context-not-set.md  creator-call-error.md  duplicate-type-error.md  finalizer-error.md  group-instantiation-error.md  group-scope-conflict-error.md  invalid-child-scope-error.md  invalid-scope-type-error.md  max-scope-reached-error.md  missing-provider.md  scope-chain.md  scope-not-initialized-error.md  scope-skipped-error.md  unknown-factory-kwarg-error.md  unsupported-creator-parameter-error.md  validation-failed-error.md
docs/tutorials/: inject-factories.md
docs/usage/: inject-factories.md  key-concepts.md  migration-from-that-depends.md  quickstart.md  scopes.md  testing.md
integrations/fastapi/: pyproject.toml
modern_di/: __init__.py  container.py  dependency_graph.py  errors.py  exceptions.py  graph.py  group.py  integrations.py  resolver_compiler.py  resolver_state.py  scope.py  suggester.py  types.py  types_parser.py  wiring.py
modern_di/containers/: __init__.py  abstract.py  async_container.py  sync_container.py
modern_di/providers/: __init__.py  abstract.py  alias.py  container_provider.py  context_provider.py  factory.py
modern_di/registries/: cache_registry.py  context_registry.py  overrides_registry.py  providers_registry.py
modern_di/resolvers/: __init__.py  abstract.py  base.py  factory.py  resource.py  singleton.py
overrides/: main.html
planning/: README.md  decisions.md  deferred.md  index.py
planning/_templates/: change.md  decision.md  design.md  plan.md
planning/audits/: 2026-06-05-bug-hunt-audit-report.md  2026-06-12-code-docs-audit-report.md  2026-06-13-docs-ux-audit-report.md  2026-06-14-deep-audit-report.md  2026-06-18-adoption-strategy-report.md  2026-07-05-v3-ux-research-report.md  2026-07-16-competitor-perf-research-report.md  2026-07-17-nogil-support-research-report.md  2026-07-18-di-concurrency-contract-report.md  2026-07-19-3.0-scope-research-report.md  2026-07-19-cold-and-cycle-hotspot-hunt-report.md  2026-07-19-di-static-analysis-surface-report.md  2026-07-19-exec-hot-path-reconsideration-report.md  2026-07-19-perf-readability-audit-report.md  2026-07-22-blessed-ready-onramp-report.md
planning/changes/: 2026-06-05.01-bug-hunt-audit.md  2026-06-05.03-validate-rework.md  2026-06-07.01-mkdocs-github-pages-migration.md  2026-06-12.02-audit-fixes.md  2026-06-13.01-audit-fixes-round2.md  2026-06-14.01-docs-ux-lows.md  2026-06-14.02-set-context-cross-scope-staleness.md  2026-06-14.04-audit-fixes-batch2.md  2026-06-14.05-audit-fixes-batch3.md  2026-06-14.06-audit-fixes-batch4-5.md  2026-06-23.01-wiring-plan-extraction.md  2026-06-23.02-inline-error-messages.md  2026-06-23.03-suggester.md  2026-06-25.01-agent-friendly-planning-convention.md  2026-07-04.01-factory-cache-arg.md  2026-07-05.01-soften-container-closed-error.md  (+65 more)
tests/: creators.py  di_graph.py  test_compiled_resolver_differential.py  test_container.py  test_custom_scope.py  test_dependency_graph.py  test_dependency_graph_contract.py  test_dependency_graph_parity.py  test_dependency_path.py  test_docs_slug_census.py  test_error_rendering.py  test_free_threading.py  test_graph.py  test_group.py  test_integrations.py  test_packaging.py  test_resolver_compiler.py  test_runtime_cycle_guard.py  test_suggester.py  test_suggestions.py  test_types_parser.py  test_wiring.py
(+191 files in other folders)
