[project]
name = "modern-di-workspace"
description = "Modern-DI workspace"
authors = [{ name = "Artur Shiriev", email = "me@shiriev.ru" }]
requires-python = ">=3.10,<4"
version = "0"
# license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
repository = "https://github.com/modern-python/modern-di"
docs = "https://modern-di.readthedocs.io"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "typing-extensions",
]

[build-system]
requires = ["hatchling"]
# requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# [tool.hatch.version]
# source = "vcs"
# fallback-version = "0"

[tool.uv]
package = false

[tool.uv.sources]
modern-di = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "new"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
target-version = "py310"
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",     # allow missing docstrings
    "S101",   # allow asserts
    "TCH",    # ignore flake8-type-checking
    "FBT",    # allow boolean args
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    "D203",   # "one-blank-line-before-class" conflicting with D211
    "D213",   # "multi-line-summary-second-line" conflicting with D212
    "COM812", # flake8-commas "Trailing comma missing"
    "ISC001", # flake8-implicit-str-concat
]
isort.lines-after-imports = 2
isort.no-lines-before = ["standard-library", "local-folder"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report term-missing"
asyncio_mode = "auto"

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
