[project]
name = "modern-di-benchmarks-comparative"
version = "0"
requires-python = ">=3.10"
dependencies = [
    "modern-di",
    "pytest",
    "pytest-benchmark",
    "dishka==1.10.1",
    "that-depends==4.0.2",
    "dependency-injector==4.49.1",
    "wireup==2.12.0",
]

[tool.uv]
package = false

[tool.uv.sources]
modern-di = { path = "../..", editable = true }
